<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MakeAFun</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="auto_save_password">记住密码</string>
    <string name="register2">注册</string>
    <string name="tool_back">返回</string>
    <string name="title_origin">默认</string>
    <string name="appName">玩疯了</string>

</resources>
