<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg_gradient"
    android:orientation="vertical" >

    <!--
         <ImageView android:id="@+id/image"   
        android:background="#87ceeb"   
        android:layout_width="wrap_content"   
        android:layout_height="wrap_content"   
        android:layout_marginLeft="28.0dip"   
        android:layout_marginTop="46.0dip"   
        android:layout_marginRight="28.0dip" />
    -->
	<ScrollView
    	android:layout_width="match_parent"
   		android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
    <TextView
        android:id="@+id/app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="#708069"
        android:text="@string/appName" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/app"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:background="@drawable/login_input"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/accounts"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/account"
            android:inputType="number"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="@android:drawable/editbox_background"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="12.0dip"
        android:background="@drawable/button_blue"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1" >

        <CheckBox
            android:id="@+id/auto_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/smallbutton"
            android:checked="true"
            android:drawableLeft="#ffffff"
            android:drawablePadding="4.0dip"
            android:text="@string/auto_save_password"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />

        <Button
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignBottom="@id/auto_save_password"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/auto_save_password"
            android:background="@drawable/smallbutton"
            android:clickable="true"
            android:gravity="left|center"
            android:paddingLeft="8.0dip"
            android:paddingRight="18.0dip"
            android:text="@string/register2"
            android:textColor="#ffffffff"
            android:textSize="12.0sp" />
    </RelativeLayout>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>